# AROBO7

./: CMakeLists.txt  README.md  package.xml
config/: camera_odom_lidar.rviz  drive_bot.rviz  my_controllers.yaml  odom_lidar.rviz  view_bot.rviz
description/: AROBO7-old.xacro  AROBO7.gazebo  AROBO7.trans  AROBO7.xacro  camera.xacro  gazebo_control.xacro  gazebo_ros2_control.xacro  lidar.xacro  materials.xacro  robot.urdf  robot.urdf.xacro  ros2_control.xacro
description/meshes/: IPITSBIT_Touchscreen_7in_v4_1_1.stl  RpLidar_Case_Bot_v8_1_1.stl  RpLidar_Case_Top_High_v6_1_1.stl  base_link.stl  camera_front_v7_1_1.stl  drive_side_plate_v42_1_1.stl  drive_side_plate_v42_Mirror__1_1.stl  lower_chassis_front_v6_1_1.stl  rplidar_sensor_v1_1_1.stl  sprocket_new_v28_1_1.stl  sprocket_new_v28_2_1.stl  sprocket_new_v28_3_1.stl  sprocket_new_v28_4_1.stl  upper_chassis_back_v10_1_1.stl  upper_chassis_front_v12_1_1.stl
launch/: launch_control_sim.launch.py  launch_robot.launch.py  launch_rviz.launch.py  launch_sim.launch.py  rsp.launch.py  rsp_control.launch.py  rsp_control_sim.launch.py  rsp_sim.launch.py
worlds/: maze.world
worlds/maze/: model.sdf
